--- a/corebase/src/main/res/values/dimens.xml
+++ b/corebase/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="txt_8">8dp</dimen>
     <dimen name="margin_5">5dp</dimen>
     <dimen name="txt_20">20dp</dimen>
+    <dimen name="txt_25">25dp</dimen>
     <dimen name="txt_30">30dp</dimen>
     <dimen name="txt_80">80dp</dimen>
     <dimen name="padding_3">3dp</dimen>
@@ -17,6 +18,7 @@
     <dimen name="margin_20">20dp</dimen>
     <dimen name="margin_30">30dp</dimen>
     <dimen name="w_40">40dp</dimen>
+    <dimen name="w_2">2dp</dimen>
     <dimen name="w_1">1dp</dimen>
     <dimen name="w_3">3dp</dimen>
     <dimen name="w_150">150dp</dimen>
