--- a/demouiza/src/main/res/values/colors.xml
+++ b/demouiza/src/main/res/values/colors.xml
@@ -35,4 +35,8 @@
     <color name="alarm_details">#888888</color>
 
     <color name="default_background_label">#ff303030</color>
+    <color name="login_line">#097cff</color>
+    <color name="hint_color">#999999</color>
+    <color name="remember_me">#3e4b5b</color>
+    <color name="bt_login">#047bf8</color>
 </resources>
