--- a/demouiza/src/main/res/values/dimens.xml
+++ b/demouiza/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="txt_8">8dp</dimen>
     <dimen name="margin_5">5dp</dimen>
     <dimen name="txt_20">20dp</dimen>
+    <dimen name="txt_25">25dp</dimen>
     <dimen name="txt_30">30dp</dimen>
     <dimen name="txt_80">80dp</dimen>
     <dimen name="padding_3">3dp</dimen>
@@ -41,4 +42,5 @@
     <dimen name="padding_label_view">10dp</dimen>
     <dimen name="margin_between_labels">3dp</dimen>
     <dimen name="padding_icon_cross">5dp</dimen>
+    <dimen name="padding_30">30dp</dimen>
 </resources>
