--- a/demouiza/src/main/res/layout/uiza_login_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_login_activity.xml
@@ -68,10 +68,13 @@
                     android:tint="@color/primaryColor" />
 
                 <EditText
+                    android:id="@+id/et_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/et_login"
                     android:hint="@string/enter_your_username"
+                    android:nextFocusDown="@+id/et_pw"
+                    android:singleLine="true"
                     android:textColorHint="@color/hint_color"
                     android:textSize="@dimen/txt_15" />
             </LinearLayout>
@@ -103,10 +106,12 @@
                     android:tint="@color/primaryColor" />
 
                 <EditText
+                    android:id="@+id/et_pw"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/et_login"
                     android:hint="@string/enter_your_password"
+                    android:singleLine="true"
                     android:textColorHint="@color/hint_color"
                     android:textSize="@dimen/txt_15" />
             </LinearLayout>
@@ -129,6 +134,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_forgot_pw"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -137,6 +143,7 @@
                     android:textSize="@dimen/txt_15" />
 
                 <TextView
+                    android:id="@+id/tv_dont_have_acc"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -151,6 +158,7 @@
                 android:layout_marginTop="@dimen/margin_20" />
 
             <TextView
+                android:id="@+id/tv_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
