--- a/demouiza/src/main/res/layout/uiza_action_bar.xml
+++ b/demouiza/src/main/res/layout/uiza_action_bar.xml
@@ -10,12 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize">
 
-        <!--<com.github.mmin18.widget.RealtimeBlurView
+        <vn.loitp.views.realtimeblurview.RealtimeBlurView
             android:id="@+id/blur_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:realtimeBlurRadius="@dimen/round_15"
-            app:realtimeOverlayColor="@color/WhiteTrans" />-->
+            app:realtimeOverlayColor="@color/WhiteTrans" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +29,8 @@
                 android:layout_height="@dimen/w_30"
                 android:layout_marginLeft="@dimen/margin_10"
                 android:contentDescription="@string/app_name"
-                android:scaleType="centerInside" />
+                android:scaleType="centerInside"
+                android:tint="@color/White" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -38,14 +39,15 @@
                 android:gravity="center">
 
                 <ImageView
-                    android:layout_width="@dimen/w_40"
-                    android:layout_height="@dimen/w_40"
+                    android:layout_width="@dimen/w_30"
+                    android:layout_height="@dimen/w_30"
                     android:contentDescription="@string/app_name"
-                    android:src="@drawable/ic_amazon" />
+                    android:scaleType="centerInside"
+                    android:src="@drawable/uiza_logo_512" />
 
                 <TextView
                     android:id="@+id/tv_title"
-                    android:layout_width="wrap_content"
+                    android:layout_width="38dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/app_name"
@@ -60,7 +62,8 @@
                 android:layout_marginRight="@dimen/margin_10"
                 android:contentDescription="@string/app_name"
                 android:scaleType="centerInside"
-                android:src="@color/transparent" />
+                android:src="@color/transparent"
+                android:tint="@color/White" />
         </LinearLayout>
     </RelativeLayout>
 
