--- a/demouiza/src/main/res/layout/uiza_home_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_home_activity.xml
@@ -9,23 +9,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
+
+            <FrameLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
             <vn.loitp.app.uiza.view.UizaActionBar
                 android:id="@+id/uiza_action_bar"
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize" />
 
-            <FrameLayout
-                android:id="@+id/fragment_container"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-
-        </LinearLayout>
+        </RelativeLayout>
 
         <FrameLayout
             android:layout_width="@dimen/w_250"
