--- a/demouiza/src/main/res/layout/uiza_splash_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_splash_activity.xml
@@ -16,10 +16,11 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="@dimen/w_80"
+                android:layout_height="@dimen/w_80"
+                android:layout_centerInParent="true"
                 android:contentDescription="@string/app_name"
-                android:src="@drawable/ic_amazon" />
+                android:src="@drawable/uiza_logo_512" />
 
             <vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
                 style="@style/AVLoadingIndicatorView"
