--- a/demouiza/src/main/res/layout/uiza_splash_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_splash_activity.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/primaryColor">
 
     <ScrollView
         android:id="@+id/scroll_view"
@@ -30,7 +31,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/margin_55"
-                app:indicatorColor="@color/Black"
+                app:indicatorColor="@color/White"
                 app:indicatorName="BallSpinFadeLoaderIndicator" />
         </RelativeLayout>
     </ScrollView>
