--- a/demouiza/src/main/res/layout/uiza_poster_list.xml
+++ b/demouiza/src/main/res/layout/uiza_poster_list.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/w_200"
-    android:background="@color/White"
+    android:layout_height="wrap_content"
+    android:background="@color/primaryColor"
     android:orientation="vertical">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/w_55" />
 
     <vn.loitp.views.viewpager.parrallaxviewpager.lib.parrallaxviewpager.ParallaxViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="@dimen/w_200" />
 </LinearLayout>
