--- a/demouiza/src/main/res/layout/uiza_frm_channel.xml
+++ b/demouiza/src/main/res/layout/uiza_frm_channel.xml
@@ -7,7 +7,7 @@
         android:id="@+id/place_holder_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:scrollbars="none" />
 
     <TextView
         android:id="@+id/tv"
