--- a/demouiza/src/main/res/layout/uiza_poster_list.xml
+++ b/demouiza/src/main/res/layout/uiza_poster_list.xml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/primaryColor"
     android:orientation="vertical">
 
     <View
+        android:id="@+id/view_dummy"
         android:layout_width="match_parent"
         android:layout_height="@dimen/w_55" />
 
-    <vn.loitp.views.viewpager.parrallaxviewpager.lib.parrallaxviewpager.ParallaxViewPager
-        android:id="@+id/viewpager"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/w_200" />
+        android:layout_height="@dimen/w_200">
+
+        <vn.loitp.views.viewpager.parrallaxviewpager.lib.parrallaxviewpager.ParallaxViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
+            android:id="@+id/avi"
+            style="@style/AVLoadingIndicatorView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            app:indicatorColor="@color/White"
+            app:indicatorName="BallSpinFadeLoaderIndicator" />
+    </RelativeLayout>
 </LinearLayout>
