--- a/demouiza/src/main/res/layout/uiza_channel_item.xml
+++ b/demouiza/src/main/res/layout/uiza_channel_item.xml
@@ -6,17 +6,32 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/w_150"
+        android:layout_height="@dimen/w_200"
         android:layout_margin="@dimen/margin_5"
+        app:cardBackgroundColor="@color/grey"
         app:cardCornerRadius="@dimen/w_5"
         app:cardElevation="@dimen/w_3">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="@dimen/w_150"
-            android:layout_height="@dimen/w_200"
-            android:contentDescription="@string/app_name"
-            android:scaleType="centerCrop" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/app_name"
+                android:scaleType="centerCrop" />
+
+            <vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
+                android:id="@+id/avi"
+                style="@style/AVLoadingIndicatorView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                app:indicatorColor="@color/White"
+                app:indicatorName="BallSpinFadeLoaderIndicator" />
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
