--- a/demouiza/src/main/res/layout/uiza_channel_list.xml
+++ b/demouiza/src/main/res/layout/uiza_channel_list.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/White"
-    android:orientation="vertical">
+    android:background="@color/primaryColor"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/padding_5"
+    android:paddingTop="@dimen/padding_5">
 
     <TextView
         android:id="@+id/tv_channel_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/padding_5"
         android:text="@string/app_name"
-        android:textColor="@color/Black"
+        android:textColor="@color/White"
         android:textSize="@dimen/txt_20"
         android:textStyle="bold" />
 
