--- a/demouiza/src/main/res/layout/uiza_channel_item.xml
+++ b/demouiza/src/main/res/layout/uiza_channel_item.xml
@@ -27,8 +27,8 @@
             <vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
                 android:id="@+id/avi"
                 style="@style/AVLoadingIndicatorView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/w_20"
+                android:layout_height="@dimen/w_20"
                 android:layout_centerInParent="true"
                 app:indicatorColor="@color/White"
                 app:indicatorName="BallSpinFadeLoaderIndicator" />
