--- a/demouiza/src/main/res/layout/uiza_channel_item.xml
+++ b/demouiza/src/main/res/layout/uiza_channel_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="@dimen/w_130"
         android:layout_height="@dimen/w_200"
         android:layout_margin="@dimen/margin_5"
-        app:cardBackgroundColor="@color/grey"
+        app:cardBackgroundColor="@color/fbutton_color_wet_asphalt"
         app:cardCornerRadius="@dimen/w_5"
         app:cardElevation="@dimen/w_3">
 
