--- a/corebase/src/main/res/values/dimens.xml
+++ b/corebase/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="txt_80">80dp</dimen>
     <dimen name="padding_3">3dp</dimen>
     <dimen name="round_15">15dp</dimen>
+    <dimen name="round_55">55dp</dimen>
     <dimen name="round_80">80dp</dimen>
     <dimen name="txt_18">18dp</dimen>
     <dimen name="w_60">60dp</dimen>
