--- a/demouiza/src/main/res/layout/uiza_splash_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_splash_activity.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     android:background="@color/primaryColor">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_margin="@dimen/margin_55"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/uiza_logo_512" />
+
+    <vn.loitp.views.realtimeblurview.RealtimeBlurView
+        android:id="@+id/blur_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:realtimeBlurRadius="@dimen/round_55"
+        app:realtimeOverlayColor="@color/black_65" />
+
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
