--- a/demouiza/src/main/res/layout/uiza_splash_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_splash_activity.xml
@@ -40,8 +40,8 @@
 
             <vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
                 style="@style/AVLoadingIndicatorView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/w_20"
+                android:layout_height="@dimen/w_20"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
