--- a/demouiza/src/main/res/layout/uiza_frm_channel.xml
+++ b/demouiza/src/main/res/layout/uiza_frm_channel.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,5 +21,17 @@
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="@dimen/txt_12"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone" />
+
+    <vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
+        android:id="@+id/avi"
+        style="@style/AVLoadingIndicatorView"
+        android:layout_width="@dimen/w_20"
+        android:layout_height="@dimen/w_20"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/margin_55"
+        app:indicatorColor="@color/White"
+        app:indicatorName="BallSpinFadeLoaderIndicator" />
 </RelativeLayout>
