--- a/demouiza/src/main/res/layout/uiza_drawer_header.xml
+++ b/demouiza/src/main/res/layout/uiza_drawer_header.xml
@@ -20,7 +20,8 @@
             android:layout_marginTop="@dimen/margin_10"
             android:contentDescription="@string/app_name"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_person_black_48dp" />
+            android:src="@drawable/ic_person_black_48dp"
+            android:tint="@color/White" />
 
         <TextView
             android:id="@+id/tv_name"
@@ -30,7 +31,7 @@
             android:layout_weight="1"
             android:singleLine="true"
             android:text="User"
-            android:textColor="@color/Black"
+            android:textColor="@color/White"
             android:textSize="@dimen/txt_20"
             android:textStyle="bold" />
 
@@ -41,7 +42,8 @@
             android:layout_marginTop="@dimen/margin_10"
             android:contentDescription="@string/app_name"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_exit_to_app_black_48dp" />
+            android:src="@drawable/ic_exit_to_app_black_48dp"
+            android:tint="@color/White" />
     </LinearLayout>
 
     <View
@@ -59,7 +61,7 @@
         android:padding="@dimen/padding_5"
         android:singleLine="true"
         android:text="Setting"
-        android:textColor="@color/grey"
+        android:textColor="@color/White"
         android:textSize="@dimen/txt_20"
         android:textStyle="bold" />
 </LinearLayout>
