--- a/demouiza/src/main/res/layout/uiza_drawer_item.xml
+++ b/demouiza/src/main/res/layout/uiza_drawer_item.xml
@@ -3,7 +3,6 @@
     android:id="@+id/mainView"
     android:layout_width="match_parent"
     android:layout_height="@dimen/w_80"
-    android:background="?attr/selectableItemBackground"
     android:gravity="center|left"
     android:orientation="horizontal"
     android:padding="@dimen/padding_10">
@@ -22,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_10"
         android:singleLine="true"
-        android:textColor="@color/grey"
+        android:textColor="@color/White"
         android:textSize="@dimen/txt_18"
         android:textStyle="bold" />
 </LinearLayout>
