--- a/demouiza/src/main/res/layout/uiza_home_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_home_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,8 +30,14 @@
         <FrameLayout
             android:layout_width="@dimen/w_250"
             android:layout_height="match_parent"
-            android:layout_gravity="left"
-            android:background="@android:color/white">
+            android:layout_gravity="left">
+
+            <vn.loitp.views.realtimeblurview.RealtimeBlurView
+                android:id="@+id/blur_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:realtimeBlurRadius="@dimen/round_15"
+                app:realtimeOverlayColor="@color/black_5" />
 
             <vn.loitp.views.placeholderview.lib.placeholderview.PlaceHolderView
                 android:id="@+id/drawerView"
