--- a/demouiza/src/main/res/layout/activity_test_video_demo_3.xml
+++ b/demouiza/src/main/res/layout/activity_test_video_demo_3.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2"
-                tools:layout="@layout/uiza_video_frm" />
+                tools:layout="@layout/uiza_video_player_frm" />
 
             <fragment
                 android:id="@+id/uiza_video_info"
