--- a/demouiza/src/main/res/layout/activity_video_5.xml
+++ b/demouiza/src/main/res/layout/activity_video_5.xml
@@ -45,7 +45,7 @@
             class="vn.loitp.app.activity.demo.video.videodemo5.frm.FrmUizaVideo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:layout="@layout/uiza_video_frm" />
+            tools:layout="@layout/uiza_video_player_frm" />
 
         <fragment
             android:id="@+id/uiza_video_info"
