--- a/demouiza/src/main/res/layout/uiza_setting_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_setting_activity.xml
@@ -20,7 +20,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Choose your skin"
-                android:textColor="@color/Black"
+                android:textColor="@color/White"
                 android:textSize="@dimen/txt_30"
                 android:textStyle="bold" />
 
@@ -33,8 +33,10 @@
                     android:id="@+id/radio_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:buttonTint="@color/White"
                     android:checked="true"
                     android:text="Skin 1"
+                    android:textColor="@color/White"
                     android:textSize="@dimen/txt_20"
                     android:textStyle="bold" />
 
@@ -42,7 +44,9 @@
                     android:id="@+id/radio_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:buttonTint="@color/White"
                     android:text="Skin 2"
+                    android:textColor="@color/White"
                     android:textSize="@dimen/txt_20"
                     android:textStyle="bold" />
 
@@ -50,7 +54,9 @@
                     android:id="@+id/radio_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:buttonTint="@color/White"
                     android:text="Skin 3"
+                    android:textColor="@color/White"
                     android:textSize="@dimen/txt_20"
                     android:textStyle="bold" />
 
