--- a/demouiza/src/main/res/layout/uiza_drawer_header.xml
+++ b/demouiza/src/main/res/layout/uiza_drawer_header.xml
@@ -63,5 +63,6 @@
         android:text="Setting"
         android:textColor="@color/White"
         android:textSize="@dimen/txt_20"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone" />
 </LinearLayout>
