--- a/demouiza/src/main/res/layout/uiza_entity_item.xml
+++ b/demouiza/src/main/res/layout/uiza_entity_item.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/w_150"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_5"
         app:cardBackgroundColor="@color/fbutton_color_wet_asphalt"
         app:cardCornerRadius="@dimen/w_5"
