--- a/demouiza/src/main/res/layout/uiza_entity_item.xml
+++ b/demouiza/src/main/res/layout/uiza_entity_item.xml
@@ -32,6 +32,16 @@
                 android:layout_centerInParent="true"
                 app:indicatorColor="@color/White"
                 app:indicatorName="BallSpinFadeLoaderIndicator" />
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:padding="@dimen/padding_3"
+                android:singleLine="true"
+                android:textColor="@color/White"
+                android:textSize="@dimen/txt_10" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
