--- a/demouiza/src/main/res/layout/uiza_drawer_header.xml
+++ b/demouiza/src/main/res/layout/uiza_drawer_header.xml
@@ -64,5 +64,5 @@
         android:textColor="@color/White"
         android:textSize="@dimen/txt_20"
         android:textStyle="bold"
-        android:visibility="gone" />
+        android:visibility="visible" />
 </LinearLayout>
