set size surface view

--- a/demouiza/src/main/res/layout/uiza_frm_channel_2.xml
+++ b/demouiza/src/main/res/layout/uiza_frm_channel_2.xml
@@ -27,6 +27,7 @@
     <com.github.pedrovgs.DraggablePanel
         android:id="@+id/draggable_panel"
         android:layout_width="match_parent"
+        android:layout_marginTop="?android:attr/actionBarSize"
         android:layout_height="match_parent"
         android:visibility="gone" />
 
