--- a/demouiza/src/main/res/layout/uiza_action_bar.xml
+++ b/demouiza/src/main/res/layout/uiza_action_bar.xml
@@ -8,14 +8,15 @@
     <RelativeLayout
         android:id="@+id/rl_menu"
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize">
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/black_65">
 
-        <vn.loitp.views.realtimeblurview.RealtimeBlurView
+        <!--<vn.loitp.views.realtimeblurview.RealtimeBlurView
             android:id="@+id/blur_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:realtimeBlurRadius="@dimen/round_55"
-            app:realtimeOverlayColor="@color/black_33" />
+            app:realtimeOverlayColor="@color/black_33" />-->
 
         <LinearLayout
             android:layout_width="match_parent"
