--- a/demouiza/src/main/res/layout/uiza_home_2_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_home_2_activity.xml
@@ -24,20 +24,21 @@
                 android:id="@+id/uiza_action_bar"
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize" />
-
         </RelativeLayout>
 
         <FrameLayout
+            android:id="@+id/fl_left_container"
             android:layout_width="@dimen/w_250"
             android:layout_height="match_parent"
-            android:layout_gravity="left">
+            android:layout_gravity="left"
+            android:background="@color/black_65">
 
-            <vn.loitp.views.realtimeblurview.RealtimeBlurView
+            <!--<vn.loitp.views.realtimeblurview.RealtimeBlurView
                 android:id="@+id/blur_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:realtimeBlurRadius="@dimen/round_55"
-                app:realtimeOverlayColor="@color/black_5" />
+                app:realtimeOverlayColor="@color/black_5" />-->
 
             <vn.loitp.views.placeholderview.lib.placeholderview.PlaceHolderView
                 android:id="@+id/drawerView"
