set size surface view

--- a/demouiza/src/main/res/layout/uiza_home_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_home_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,7 +29,8 @@
         <FrameLayout
             android:layout_width="@dimen/w_250"
             android:layout_height="match_parent"
-            android:layout_gravity="left">
+            android:layout_gravity="left"
+            android:background="@color/black_65">
 
             <!--<vn.loitp.views.realtimeblurview.RealtimeBlurView
                 android:id="@+id/blur_view"
