--- a/demouiza/src/main/res/layout/uiza_login_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_login_activity.xml
@@ -21,17 +21,17 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/margin_30"
                 android:contentDescription="@string/app_name"
-                android:src="@mipmap/ic_launcher"
-                android:tint="@color/primaryColor" />
+                android:src="@mipmap/ic_launcher" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_55"
                 android:layout_marginRight="@dimen/margin_55"
+                android:gravity="center"
                 android:padding="@dimen/padding_5"
                 android:text="@string/login_form"
-                android:textColor="@color/Black"
+                android:textColor="@color/White"
                 android:textSize="@dimen/txt_25"
                 android:textStyle="bold" />
 
@@ -49,6 +49,7 @@
                 android:layout_marginTop="@dimen/margin_30"
                 android:padding="@dimen/padding_5"
                 android:text="@string/input_email_or_phone"
+                android:textColor="@color/White"
                 android:textSize="@dimen/txt_15" />
 
             <LinearLayout
@@ -64,8 +65,7 @@
                     android:layout_height="@dimen/w_40"
                     android:contentDescription="@string/app_name"
                     android:padding="@dimen/padding_5"
-                    android:src="@mipmap/ic_launcher"
-                    android:tint="@color/primaryColor" />
+                    android:src="@mipmap/ic_launcher" />
 
                 <EditText
                     android:id="@+id/et_id"
@@ -87,6 +87,7 @@
                 android:layout_marginTop="@dimen/margin_20"
                 android:padding="@dimen/padding_5"
                 android:text="@string/input_password"
+                android:textColor="@color/White"
                 android:textSize="@dimen/txt_15" />
 
             <LinearLayout
@@ -102,8 +103,7 @@
                     android:layout_height="@dimen/w_40"
                     android:contentDescription="@string/app_name"
                     android:padding="@dimen/padding_5"
-                    android:src="@mipmap/ic_launcher"
-                    android:tint="@color/primaryColor" />
+                    android:src="@mipmap/ic_launcher" />
 
                 <EditText
                     android:id="@+id/et_pw"
@@ -139,8 +139,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/forgot_password"
-                    android:textColor="@drawable/text_blue_black"
-                    android:textSize="@dimen/txt_15" />
+                    android:textColor="@drawable/text_blue_white"
+                    android:textSize="@dimen/txt_12" />
 
                 <TextView
                     android:id="@+id/tv_dont_have_acc"
@@ -148,8 +148,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/don_t_have_account"
-                    android:textColor="@drawable/text_blue_black"
-                    android:textSize="@dimen/txt_15" />
+                    android:textColor="@drawable/text_blue_white"
+                    android:textSize="@dimen/txt_12" />
             </LinearLayout>
 
             <View
@@ -164,6 +164,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/margin_20"
                 android:background="@drawable/bt_login"
+                android:gravity="center"
                 android:paddingBottom="@dimen/padding_5"
                 android:paddingLeft="@dimen/padding_30"
                 android:paddingRight="@dimen/padding_30"
