--- a/demouiza/src/main/res/layout/uiza_login_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_login_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -116,14 +117,24 @@
                     android:textSize="@dimen/txt_15" />
             </LinearLayout>
 
-            <CheckBox
+            <!--<CheckBox
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_55"
                 android:layout_marginRight="@dimen/margin_55"
                 android:layout_marginTop="@dimen/margin_20"
                 android:text="@string/remember_me"
-                android:textColor="@color/remember_me" />
+                android:textColor="@color/remember_me" />-->
+
+            <android.support.v7.widget.AppCompatCheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_55"
+                android:layout_marginRight="@dimen/margin_55"
+                android:layout_marginTop="@dimen/margin_20"
+                android:text="@string/remember_me"
+                android:textColor="@color/remember_me"
+                app:buttonTint="@color/remember_me" />
 
             <LinearLayout
                 android:layout_width="match_parent"
