--- a/corebase/src/main/res/values/colors.xml
+++ b/corebase/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="black_2">#05000000</color>
     <color name="black_5">#10000000</color>
 
+    <color name="drawer_hightlight">#182243</color>
     <color name="primaryColor">#0a0f20</color>
     <color name="colorPrimary">#0a0f20</color>
     <color name="colorAccent">#0a0f20</color>
