--- a/corebase/src/main/res/values/dimens.xml
+++ b/corebase/src/main/res/values/dimens.xml
@@ -25,6 +25,7 @@
     <dimen name="w_150">150dp</dimen>
     <dimen name="w_130">130dp</dimen>
     <dimen name="w_10">10dp</dimen>
+    <dimen name="w_7">7dp</dimen>
     <dimen name="w_5">5dp</dimen>
     <dimen name="w_20">20dp</dimen>
     <dimen name="w_30">30dp</dimen>
