--- a/demouiza/src/main/res/layout/uiza_login_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_login_activity.xml
@@ -18,10 +18,21 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/iv_close_activity"
+                android:layout_width="@dimen/w_15"
+                android:layout_height="@dimen/w_15"
+                android:layout_gravity="right"
+                android:layout_marginRight="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_5"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/ic_close"
+                android:tint="@color/Black" />
+
+            <ImageView
                 android:layout_width="@dimen/w_80"
                 android:layout_height="@dimen/w_80"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/margin_30"
+                android:layout_marginTop="@dimen/margin_20"
                 android:contentDescription="@string/app_name"
                 android:src="@mipmap/ic_launcher" />
 
