--- a/demouiza/src/main/res/layout/uiza_frm_channel_2.xml
+++ b/demouiza/src/main/res/layout/uiza_frm_channel_2.xml
@@ -21,14 +21,25 @@
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="@dimen/txt_12"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tv_msg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:padding="@dimen/padding_5"
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="@dimen/txt_18"
         android:textStyle="bold"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
     <com.github.pedrovgs.DraggablePanel
         android:id="@+id/draggable_panel"
         android:layout_width="match_parent"
-        android:layout_marginTop="?android:attr/actionBarSize"
         android:layout_height="match_parent"
+        android:layout_marginTop="?android:attr/actionBarSize"
         android:visibility="gone" />
 
     <vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
