--- a/demouiza/src/main/res/layout/uiza_frm_channel_2.xml
+++ b/demouiza/src/main/res/layout/uiza_frm_channel_2.xml
@@ -35,7 +35,7 @@
         android:textStyle="bold"
         android:visibility="gone" />
 
-    <com.github.pedrovgs.DraggablePanel
+    <vn.loitp.views.draggablepanel.DraggablePanel
         android:id="@+id/draggable_panel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
