--- a/demouiza/src/main/res/layout/uiza_home_2_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_home_2_activity.xml
@@ -24,6 +24,12 @@
                 android:id="@+id/uiza_action_bar"
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize" />
+
+            <vn.loitp.views.draggablepanel.DraggablePanel
+                android:id="@+id/draggable_panel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
         </RelativeLayout>
 
         <FrameLayout
