--- a/demouiza/src/main/res/layout/uiza_action_bar.xml
+++ b/demouiza/src/main/res/layout/uiza_action_bar.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ll_main"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="?android:attr/actionBarSize">
 
     <RelativeLayout
         android:id="@+id/rl_menu"
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
+        android:layout_height="match_parent"
         android:background="@color/black_65">
 
         <!--<vn.loitp.views.realtimeblurview.RealtimeBlurView
