--- a/demouiza/src/main/res/layout/uiza_option_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_option_activity.xml
@@ -39,20 +39,109 @@
                 android:src="@drawable/uiza_logo_512" />
 
 
-            <Button
-                android:id="@+id/bt_0"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/bt_1"
-                android:text="Version 1 Non Slide (Work fine)" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="@dimen/padding_5">
 
-            <Button
-                android:id="@+id/bt_1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:text="Version 2 Slide Video (Doing)" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Choose your Video skin"
+                    android:textColor="@color/White"
+                    android:textSize="@dimen/txt_20"
+                    android:textStyle="bold" />
 
+                <RadioGroup
+                    android:id="@+id/radio_group_skin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <RadioButton
+                        android:id="@+id/radio_skin_1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/White"
+                        android:checked="true"
+                        android:text="Skin 1"
+                        android:textColor="@color/White"
+                        android:textSize="@dimen/txt_20"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/radio_skin_2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/White"
+                        android:text="Skin 2"
+                        android:textColor="@color/White"
+                        android:textSize="@dimen/txt_20"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/radio_skin_3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/White"
+                        android:text="Skin 3"
+                        android:textColor="@color/White"
+                        android:textSize="@dimen/txt_20"
+                        android:textStyle="bold" />
+
+                </RadioGroup>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Video can slide or not?"
+                    android:textColor="@color/White"
+                    android:textSize="@dimen/txt_20"
+                    android:textStyle="bold" />
+
+                <RadioGroup
+                    android:id="@+id/radio_group_slide"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <RadioButton
+                        android:id="@+id/radio_cannot_slide"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/White"
+                        android:checked="true"
+                        android:text="Cannot slide"
+                        android:textColor="@color/White"
+                        android:textSize="@dimen/txt_20"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/radio_can_slide"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/White"
+                        android:text="Can slide"
+                        android:textColor="@color/White"
+                        android:textSize="@dimen/txt_20"
+                        android:textStyle="bold" />
+
+                </RadioGroup>
+
+                <Button
+                    android:id="@+id/bt_0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/bt_1"
+                    android:text="Version 1 Non Slide (Work fine)" />
+
+                <Button
+                    android:id="@+id/bt_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:text="Version 2 Slide Video (Doing)" />
+
+            </LinearLayout>
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
